INTERNAL-278: Add share button with popup

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
@@ -12,6 +12,7 @@ use Magento\Catalog\Block\Product\View;
         <?= $block->getChildHtml('product.title') ?>
         <?= $block->getChildHtml('product.info') ?>
     </div>
-  <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
-  <?= $block->getChildHtml('product.info.details') ?>
+    <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
+    <?= $block->getChildHtml('product.info.details') ?>
+    <?= $block->getChildHtml('product.share') ?>
 </div>
