--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
@@ -37,14 +37,17 @@ $productCollection = $block->getLoadedProductCollection();
     >
         <div class="flex md:items-start">
             <div class="flex-grow">
-                <div class="
-                        mb-5 grid gap-x-4 gap-y-4 transition-opacity duration-100 ease-linear grid-cols-2
-                        md:grid-cols-2 lg:grid-cols-3
-                        xl:grid-cols-4 2xl:grid-cols-5
-                     "
-                     data-content-wrapper
-                     id="product-grid"
+                <div
+                    data-content-wrapper
+                    id="product-grid"
+                    class="mb-5 grid gap-6 transition-opacity duration-100 ease-linear md:mb-16 grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5"
+                    :class="
+                        {
+                            'opacity-0': isLoadingProducts,
+                        }
+                    "
                 >
+                    <!-- pagination-content -->
                     <?php
                     /** @var Product $product */
                     foreach (array_values($productCollection->getItems()) as $i => $product):
@@ -61,6 +64,7 @@ $productCollection = $block->getLoadedProductCollection();
                         false
                     ); ?>
                     <?php endforeach; ?>
+                    <!-- end-pagination-content -->
                 </div>
             </div>
         </div>
