INTERNAL-9: Fix conflict with sorting toolbar

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
@@ -71,8 +71,6 @@ $productCollection = $block->getLoadedProductCollection();
                 </div>
             </div>
         </div>
-        <?php if ($toolbarBlock = $block->getChildBlock('toolbar')): ?>
-            <?= $toolbarBlock->setIsBottom(true)->toHtml() ?>
-        <?php endif; ?>
+        <?= $block->getChildBlock('toolbar')->setIsBottom(true)->toHtml() ?>
     </section>
 <?php endif; ?>
