INTERNAL-65: Safely pass menu item description

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
@@ -157,7 +157,7 @@ if (!$menuItems) {
             'url': '<?= $menuItem['url'] ?>',
             'breadcrumbs': <?= $escaper->escapeHtmlAttr(json_encode($breadcrumbs)) ?>,
             'img': '<?= $menuItem['image'] ?>',
-            'description': `<?= $escaper->escapeUrl($menuItem['description']) ?>`,
+            'description': `<?= $escaper->escapeUrl($menuItem['description'] ?? '') ?>`,
           }
         "
         class="focus-visible:focus-ring group flex min-h-11 items-center justify-between py-1"
