Fix duplicated product grid container

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
@@ -11,9 +11,8 @@ use Magento\Framework\View\Element\Template;
   id="ProductGridContainer"
   class="content-wrapper animate-on-transition mx-auto"
   x-ref="ProductGridContainer"
-  <?php // path set to empty temporarily, will refactored in filters task ?>
   x-data="ProductList('')"
-  key="ProductList-someId"
+  key="ProductList-all"
 >
   <!-- Filters on mobile goes here -->
   <?= $block->getChildHtml() ?>
