Fix empty search results

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -48,8 +48,8 @@ $productOptionsViewmodel = $viewModels->require(ProductOptionsData::class);
 
 $isLarge = $block->getData('isLarge');
 $class = $block->getData('class');
-$isSearchCard = $block->getData('isSearchCard');
-$isAlpineTemplate = $block->getData('isAlpineTemplate');
+$isSearchCard = $block->getData('is_search_card');
+$isAlpineTemplate = $block->getData('is_alpine_template');
 $featuredImage = false;
 
 if (!$isAlpineTemplate) {
