--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
@@ -2,8 +2,8 @@
 
 declare(strict_types=1);
 
-use Magento\Catalog\ViewModel\Product\Breadcrumbs;
 use Hyva\Theme\Model\ViewModelRegistry;
+use Magento\Catalog\ViewModel\Product\Breadcrumbs;
 use Magento\Framework\Escaper;
 
 /** @var Escaper $escaper */
@@ -13,15 +13,17 @@ $breadcrumbsViewModel = $viewModels->require(Breadcrumbs::class);
 $categoryUrlSuffix = $breadcrumbsViewModel->getCategoryUrlSuffix();
 
 ?>
-<div
-  x-show="categories.length"
-  class="relative flex grow flex-col gap-4 p-3 pb-2 transition-opacity duration-300 md:p-5"
-  :class="{ 'opacity-0': isLoading }"
->
+<div class="relative flex grow flex-col gap-4 p-3 pb-2 transition-opacity duration-300 md:p-5"
+     :class="{ 'opacity-0': isLoading }">
   <div class="pb-2">
     <h2 class="text-lg"><?= __('Categories') ?></h2>
   </div>
   <div class="flex min-h-11 flex-col gap-2 md:min-h-[48px]">
+    <p x-show="!categories.length && searchTerm">
+      <b class="font-semibold text-text-700"><?= __('Oops!') ?></b>
+      <?= __('We could not find any categories matching your search.') ?>
+    </p>
+
     <div
       x-show="categories.length"
       class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width] max-md:pb-3"
