--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_resizable.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_resizable.scss
@@ -202,6 +202,7 @@
 
       &--trigger {
         @apply flex h-full w-full items-center justify-center;
+
         .resizable--visible & {
           @apply pointer-events-none opacity-0 delay-0;
         }
@@ -225,8 +226,36 @@
     }
 
     &__fixed {
-      transform: translateY(calc(var(--target-height) * 1px - 100%));
-      @apply pointer-events-none absolute left-0 top-0 w-full motion-reduce:transition-none;
+      @apply pointer-events-none absolute top-0 z-30 opacity-0 motion-reduce:transition-none;
+
+      transition: width 0ms 600ms ease-in-out,
+      opacity 300ms ease-in-out,
+      transform 300ms var(--t-delay) ease-in-out,
+      border-radius 300ms var(--b-delay) ease-in-out;
+
+      width: calc(var(--target-width) * 1px);
+      transform: translateY(
+          calc(
+            -100% + min(calc(var(--target-height) * 1px), calc(100dvh - 16px * 2 -
+            34px))
+          )
+      );
+
+      .resizable--right & {
+        @apply right-0;
+      }
+
+      .resizable--left & {
+        @apply left-0;
+      }
+
+      .resizable--visible & {
+        @apply opacity-100;
+
+        transition: opacity 300ms calc(var(--t-delay) * 2) ease-in-out,
+        transform 300ms var(--t-delay) ease-in-out,
+        border-radius 300ms var(--b-delay) ease-in-out;
+      }
 
       > * {
         @apply pointer-events-none;
