--- a/app/code/Satoshi/Theme/view/frontend/templates/resizable.phtml
+++ b/app/code/Satoshi/Theme/view/frontend/templates/resizable.phtml
@@ -1,6 +1,11 @@
 <?php
 
-/** @var \Satoshi\Theme\Block\Resizable $block */
+use Hyva\Theme\Model\ViewModelRegistry;
+use Satoshi\Theme\Block\Resizable;
+
+/** @var ViewModelRegistry $viewModels */
+
+/** @var Resizable $block */
 $initialHeight = $block->getData('initialHeight');
 $initialWidth = $block->getData('initialWidth');
 $id = $block->getId();
@@ -9,11 +14,12 @@ $isRight = $block->getData('right');
 $onTransitionEnd = $block->getData('onTransitionEnd');
 
 if ($isRight) {
-  $cssClasses  = $cssClasses . ' resizable--right';
+  $cssClasses .= ' resizable--right';
+} else {
+  $cssClasses .= ' resizable--left';
 }
 
 ?>
-
 <div
   class="resizable <?= $cssClasses ?>"
   x-data="{ isTransitioning: false }"
@@ -23,13 +29,13 @@ if ($isRight) {
       '--initial-width': <?= $initialWidth ?>,
       '--initial-height': <?= $initialHeight ?>,
       '--target-width': `${$store.resizable._current['<?= $id ?>']?.width || <?= $initialWidth ?>}`,
-      '--target-height': `${$store.resizable._current['<?= $id ?>']?.height || <?= $initialHeight ?>}`,
+      '--target-height': `${$store.resizable._current['<?= $id ?>']?.height || <?= $initialHeight ?>}`
     }
   "
   :class="
     {
       'resizable--visible': $store.resizable._current['<?= $id ?>'],
-      'resizable--transitioning': isTransitioning,
+      'resizable--transitioning': isTransitioning
     }
   "
   x-init="$store.resizable._register({id: '<?= $id ?>'})"
@@ -64,10 +70,10 @@ if ($isRight) {
         class="resizable__scroll"
         :inert="!$store.resizable._current['<?= $id ?>']"
       ></div>
+    </div>
       <div
         id="<?= $id ?>-fixed"
         class="resizable__fixed"
       ></div>
-    </div>
   </div>
 </div>
