--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -4,10 +4,14 @@ declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
+use Magento\Framework\Escaper;
+use Satoshi\Theme\Block\Template;
 use Satoshi\Theme\ViewModel\Cart\Cart;
 
 /** @var ViewModelRegistry $viewModels */
 /** @var Template $block */
+/** @var Template $template */
+/** @var Escaper $escaper */
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
@@ -29,7 +33,7 @@ $title = $block->getData('title');
       get cartItems() { return $store.cart.cartItems },
       get isCartEmpty() { return !$store.cart.cartItems.length },
       get isRemoveContent() { return !$store.cart.cartItems.length },
-      isTotalsExpanded: false,
+      isTotalsExpanded: false
     }
   "
   class="contents"
@@ -43,7 +47,7 @@ $title = $block->getData('title');
       <h1 class="flex items-center text-lg text-text-500 <?= $isCartPage ? '' : 'md:text-md' ?>">
         <?php if (!$isCartPage) : ?>
         <span class="button__icon mr-4 text-[1.5rem] max-md:hidden">
-          <?= $hyvaicons->renderHtml('cart-empty'); ?>
+          <?= $hyvaicons->renderHtml('cart-empty') ?>
         </span>
         <?php endif; ?>
 
@@ -109,7 +113,7 @@ $title = $block->getData('title');
           <div
             :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
             class="contents"
-            x-show="!$store.main.isMobile || $store.popup.currentPopup == 'cart'"
+            x-show="!$store.main.isMobile || $store.popup.currentPopup === 'cart'"
           >
             <div
               <?php if (!$cartItemsCount) : ?>
