--- a/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
@@ -24,14 +24,18 @@ foreach ($currencies as $code => $currency) {
         <span>{$escaper->escapeHtml("$code $symbol")}</span>
     ";
 
+    $postData = json_decode($currencyViewModel->getSwitchCurrencyPostData($code), true);
+    $switchUrl = is_array($postData)
+        ? "fetchAndReplaceContent('{$escaper->escapeUrl($postData['action'] . "?currency=" . $postData['data']['currency'] . "&uenc=" . $postData['data']['uenc'])}')"
+        : "hyva.postForm({$currencyViewModel->getSwitchCurrencyPostData($code)})";
+
     $options[] = [
         'value' => $escaper->escapeHtml($code),
         'label' => $label,
-        'on_click' => "hyva.postForm({$currencyViewModel->getSwitchCurrencyPostData($code)})",
+        'on_click' => $switchUrl,
         'is_active' => $code === $currentCurrencyCode,
     ];
 }
-
 
 $currency = $currencies[$currentCurrencyCode];
 if ($currency) {
