--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/pdp_fallback.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/pdp_fallback.phtml
@@ -8,7 +8,7 @@ use Magento\Framework\View\Element\Template;
 /** @var Escaper $escaper */
 /** @var Template $block */
 
-$isContain = true;
+$isContain = false;
 $mixBackground = false;
 ?>
 
