INTERNAL-277: Remove logs from Gallery.ts

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/video.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/video.phtml
@@ -25,7 +25,7 @@ $index = $block->getData('index');
             @click="activateVideo(<?= $index ?>)"
         >
             <?= $heroiconsSolid->playHtml(
-                'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 w-24 h-24',
                 44,
                 44,
                 ['aria-hidden' => 'true']
