--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
@@ -5,6 +5,7 @@
         <referenceBlock name="product.detail.page">
             <block class="Magento\Catalog\Block\Product\View" name="product.details" template="Magento_Catalog::product/view/product-details.phtml">
                 <block class="Magento\Catalog\Block\Product\View" name="product.details.info" template="Magento_Catalog::product/view/product-details-info.phtml">
+                    <block name="product.hide" template="Magento_Catalog::product/view/product-hide.phtml"/>
                     <block name="product.share" template="Magento_Catalog::product/view/share.phtml">
                         <block name="product.share.content" template="Magento_Catalog::product/view/share-content.phtml"/>
                     </block>
