--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
@@ -15,4 +15,5 @@ use Magento\Catalog\Block\Product\View;
     <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
     <?= $block->getChildHtml('product.info.details') ?>
     <?= $block->getChildHtml('product.share') ?>
+    <?= $block->getChildHtml('product.hide') ?>
 </div>
